--- a/user-interface/frontend/themes/datamanager/components/dialog.css
+++ b/user-interface/frontend/themes/datamanager/components/dialog.css
@@ -18,7 +18,7 @@ vaadin-dialog-overlay::part(title) {
   margin-inline-start: 0;
 }
 
-.large-dialog::part(overlay) {
+.dialog-large::part(overlay) {
   width: 66vw;
 }
 
