--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -1,7 +1,331 @@
+/****************************************
+
+Data Manager custom CSS layout definition
+
+*****************************************/
+
+/*
+First some general property definitions
+*/
+:root {
+  --dialog-height-small: clamp(min-content, 50vh, 75vh);
+  --dialog-height-medium: clamp(min-content, 75vh, 100vh);
+  --dialog-height-large: 100vh;
+  --dialog-height-max-small: 500px;
+  --dialog-height-max-medium: 800px;
+  --dialog-height-max-large: 100vh;
+  --dialog-width-small: 50vw;
+  --dialog-width-medium: 75vw;
+  --dialog-width-large: 80vw;
+  --dialog-width-max-small: 600px;
+  --dialog-width-max-medium: 1000px;
+  --dialog-width-max-large: 1200px;
+  --font-weight-light: 300;
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-semi-bold: 600;
+  --font-weight-bold: 700;
+  --icon-color-info: rgba(22, 118, 243, 1);
+  --icon-color-error: rgba(255, 66, 56, 1);
+  --icon-color-success: rgba(21, 193, 93, 1);
+  --icon-color-warning: rgba(254, 201, 1, 1);
+  --icon-size-m: var(--lumo-icon-size-m);
+  --spacing-01: 0.125rem;
+  --spacing-02: 0.25rem;
+  --spacing-03: 0.5rem;
+  --spacing-04: 1rem;
+  --spacing-05: 1.5rem;
+  --spacing-06: 2rem;
+  --spacing-07: 2.5rem;
+  --spacing-08: 3rem;
+  --spacing-09: 3.5rem;
+  --spacing-10: 4rem;
+  --spacing-11: 5rem;
+  --spacing-12: 6rem;
+}
+
+/************************
+Fonts
+ ***********************/
+
+/*
+Heading
+ */
+.heading-1 {
+  font-size: var(--lumo-font-size-xxxl);
+  font-weight: var(--font-weight-semi-bold);
+}
+
+.heading-2 {
+  font-size: var(--lumo-font-size-xxl);
+  font-weight: var(--font-weight-semi-bold);
+}
+
+.heading-3 {
+  font-size: var(--lumo-font-size-xl);
+  font-weight: var(--font-weight-semi-bold);
+}
+
+.heading-4 {
+  font-size: var(--lumo-font-size-l);
+  font-weight: var(--font-weight-semi-bold);
+}
+
+.heading-5 {
+  font-size: var(--lumo-font-size-m);
+  font-weight: var(--font-weight-semi-bold);
+}
+
+.heading-6 {
+  font-size: var(--lumo-font-size-xs);
+  font-weight: var(--font-weight-semi-bold);
+}
+
+
+/*
+Body text
+ */
+
+.normal-body-text {
+  font-size: var(--lumo-font-size-m);
+  line-height: var(--lumo-line-height-m);
+  font-weight: var(--font-weight-regular);
+}
+
+.small-body-text {
+  font-size: var(--lumo-font-size-s);
+  line-height: var(--lumo-line-height-s);
+  font-weight: var(--font-weight-regular);
+}
+
+.extra-small-body-text {
+  font-size: var(--lumo-font-size-xs);
+  line-height: var(--lumo-line-height-xs);
+  font-weight: var(--font-weight-regular);
+}
+
+.field-label-text {
+  font-size: var(--lumo-font-size-s);
+  line-height: var(--lumo-line-height-xs);
+  font-weight: var(--font-weight-medium);
+}
+
+.input-field-text {
+  font-size: var(--lumo-font-size-m);
+  line-height: var(--lumo-line-height-s);
+  font-weight: var(--font-weight-medium);
+}
+
+.list-item-text {
+  font-size: var(--lumo-font-size-m);
+  line-height: var(--spacing-07);
+  font-weight: var(--font-weight-regular);
+}
+
+.button-text {
+  font-size: var(--lumo-font-size-m);
+  line-height: var(--lumo-line-height-xs);
+  font-weight: var(--font-weight-medium);
+}
+
+.button-text-primary {
+  font-size: var(--lumo-font-size-m);
+  line-height: var(--lumo-line-height-xs);
+  font-weight: var(--font-weight-semi-bold);
+}
+
+.text-margin-bottom-03 {
+  margin-bottom: var(--spacing-03);
+}
+
+.text-margin-bottom-04 {
+  margin-bottom: var(--spacing-04);
+}
+
+
+/***************************
+Padding & gaps
+***************************/
+
+.padding-left-right-04 {
+  padding-left: var(--spacing-04);
+  padding-right: var(--spacing-04);
+}
+
+.padding-left-right-05 {
+  padding-left: var(--spacing-05);
+  padding-right: var(--spacing-05);
+}
+
+.padding-left-right-06 {
+  padding-left: var(--spacing-06);
+  padding-right: var(--spacing-06);
+}
+
+.padding-left-right-07 {
+  padding-left: var(--spacing-07);
+  padding-right: var(--spacing-07);
+}
+
+.padding-top-bottom-04 {
+  padding-top: var(--spacing-04);
+  padding-bottom: var(--spacing-04);
+}
+
+.padding-top-bottom-05 {
+  padding-top: var(--spacing-05);
+  padding-bottom: var(--spacing-05);
+}
+
+.padding-top-bottom-06 {
+  padding-top: var(--spacing-06);
+  padding-bottom: var(--spacing-06);
+}
+
+.padding-top-bottom-07 {
+  padding-top: var(--spacing-07);
+  padding-bottom: var(--spacing-07);
+}
+
+.gap-04 {
+  gap: var(--spacing-04);
+}
+
+.gap-05 {
+  gap: var(--spacing-05);
+}
+
+.gap-06 {
+  gap: var(--spacing-06);
+}
+
+.gap-07 {
+  gap: var(--spacing-07);
+}
+
+
+/***************************
+Dialogs
+***************************/
+
+/*
+Sections
+ */
+.dialog-section {
+  display: flex;
+  flex-direction: column;
+}
+
+/*
+Dialog flavours
+ */
+.dialog-app {}
+
+.dialog-app, .button-text, .button-text-primary {
+  margin: 0;
+}
+
+.dialog-small {}
+
+.dialog-medium {}
+
+.dialog-large {}
+
+.dialog-small::part(overlay) {
+  width: var(--dialog-width-small);
+  max-width: var(--dialog-width-max-small);
+  height: var(--dialog-height-small);
+  max-height: var(--dialog-height-max-small);
+}
+
+.dialog-medium::part(overlay) {
+  width: var(--dialog-width-medium);
+  max-width: var(--dialog-width-max-medium);
+  height: var(--dialog-height-medium);
+  max-height: var(--dialog-height-max-medium);
+}
+
+.dialog-large::part(overlay) {
+  width: var(--dialog-width-large);
+  max-width: var(--dialog-width-max-large);
+  height: var(--dialog-height-large);
+  max-height: var(--dialog-height-max-large);
+}
+
+.dialog-app::part(header)  {
+  padding: 0;
+  border-bottom-style: solid;
+  border-bottom-color: rgba(26, 56, 96, 0.1);
+  border-bottom-width: 1px;
+}
+
+.dialog-app::part(content)  {
+  padding: 0;
+}
+
+.dialog-app::part(footer)  {
+  padding: 0;
+  background-color: white;
+  border-top-style: solid;
+  border-top-color: rgba(26, 56, 96, 0.1);
+  border-top-width: 1px;
+}
+
+.dialog-header-text-color {
+  color: var(--lumo-header-text-color);
+}
+
+/***************************
+Buttons
+ **************************/
+
+.button-color-primary {
+  color: var(--lumo-primary-contrast-color);
+  background-color: var(--lumo-primary-color);
+}
+
+.button-size-medium-dialog {
+  height: var(--lumo-size-m);
+}
+
+.button-size-large-dialog {
+  height: var(--lumo-size-l);
+}
+
+
+/***************************
+Icons
+****************************/
+
+.icon-color-warning {
+  color: var(--icon-color-warning)
+}
+
+.icon-size-m {
+  height: var(--icon-size-m);
+}
+
+
+
+/****************************
+Layout
+*****************************/
+
+.flex-align-items-center {
+  align-items: center;
+}
+
 .flex-horizontal {
   display: flex;
   flex-direction: row;
 }
+
+
+
+/****************************
+Older stuff -
+****************************/
+
 
 .heading-with-icon {
   color: #878787;
