--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -25,11 +25,16 @@ First some general property definitions
   --font-weight-medium: 500;
   --font-weight-semi-bold: 600;
   --font-weight-bold: 700;
+  --icon-color-primary: var(--lumo-primary-color);
   --icon-color-info: rgba(22, 118, 243, 1);
   --icon-color-error: rgba(255, 66, 56, 1);
   --icon-color-success: rgba(21, 193, 93, 1);
   --icon-color-warning: rgba(254, 201, 1, 1);
+  --icon-color-default: rgba(28, 46, 69, 0.6);
+  --icon-size-xs: 1rem;
+  --icon-size-s: var(--lumo-icon-size-s);
   --icon-size-m: var(--lumo-icon-size-m);
+  --icon-size-l: var(--lumo-icon-size-l);
   --spacing-01: 0.125rem;
   --spacing-02: 0.25rem;
   --spacing-03: 0.5rem;
@@ -147,6 +152,11 @@ Body text
 Padding & gaps
 ***************************/
 
+.padding-left-right-02 {
+  padding-left: var(--spacing-02);
+  padding-right: var(--spacing-02);
+}
+
 .padding-left-right-04 {
   padding-left: var(--spacing-04);
   padding-right: var(--spacing-04);
@@ -185,6 +195,10 @@ Padding & gaps
 .padding-top-bottom-07 {
   padding-top: var(--spacing-07);
   padding-bottom: var(--spacing-07);
+}
+
+.gap-02 {
+  gap: var(--spacing-02);
 }
 
 .gap-04 {
@@ -320,10 +334,70 @@ Icons
   color: var(--icon-color-warning)
 }
 
-.icon-size-m {
-  height: var(--icon-size-m);
+.icon-size-xs {
+  height: var(--icon-size-xs);
+  width: var(--icon-size-xs);
 }
 
+.icon-size-s {
+  height: var(--icon-size-s);
+  width: var(--icon-size-s);
+}
+
+.icon-size-m {
+  height: var(--icon-size-m);
+  width: var(--icon-size-m);
+}
+
+.icon-size-l {
+  height: var(--icon-size-l);
+  width: var(--icon-size-l);
+}
+
+.round {
+  border-radius: 50%;
+}
+
+.icon-background-color-default {
+  background-color: var(--icon-color-default);
+}
+
+.icon-background-color-primary {
+  background-color: var(--icon-color-primary);
+}
+
+.icon-color-default {
+  color: var(--icon-color-default);
+}
+
+
+
+.icon-text-white {
+  color: white;
+}
+
+.icon-text-inner {
+  font-size: 0.6875rem;
+}
+
+.icon-label-text {
+  font-size: 0.875rem;
+}
+
+.icon-label-text-color-default {
+  color: var(--icon-color-default);
+}
+
+.icon-label-text-color-primary {
+  color: var(--icon-color-primary);
+}
+
+.icon-content-center {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
+}
 
 
 /****************************
@@ -337,6 +411,11 @@ Layout
 .flex-horizontal {
   display: flex;
   flex-direction: row;
+}
+
+.flex-vertical {
+  display: flex;
+  flex-direction: column;
 }
 
 
