--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -157,6 +157,11 @@ Padding & gaps
   padding-right: var(--spacing-02);
 }
 
+.padding-left-right-03 {
+  padding-left: var(--spacing-03);
+  padding-right: var(--spacing-03);
+}
+
 .padding-left-right-04 {
   padding-left: var(--spacing-04);
   padding-right: var(--spacing-04);
@@ -199,6 +204,10 @@ Padding & gaps
 
 .gap-02 {
   gap: var(--spacing-02);
+}
+
+.gap-03 {
+  gap: var(--spacing-03);
 }
 
 .gap-04 {
