--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -25,11 +25,16 @@ First some general property definitions
   --font-weight-medium: 500;
   --font-weight-semi-bold: 600;
   --font-weight-bold: 700;
+  --icon-color-primary: var(--lumo-primary-color);
   --icon-color-info: rgba(22, 118, 243, 1);
   --icon-color-error: rgba(255, 66, 56, 1);
   --icon-color-success: rgba(21, 193, 93, 1);
   --icon-color-warning: rgba(254, 201, 1, 1);
-  --icon-size-m: var(--lumo-icon-size-m);
+  --icon-color-default: rgba(28, 46, 69, 0.6);
+  --icon-size-xs: 1rem;
+  --icon-size-s: 1.25rem;
+  --icon-size-m: 1.5rem;
+  --icon-size-l: 2rem;
   --spacing-01: 0.125rem;
   --spacing-02: 0.25rem;
   --spacing-03: 0.5rem;
@@ -147,6 +152,16 @@ Body text
 Padding & gaps
 ***************************/
 
+.padding-left-right-02 {
+  padding-left: var(--spacing-02);
+  padding-right: var(--spacing-02);
+}
+
+.padding-left-right-03 {
+  padding-left: var(--spacing-03);
+  padding-right: var(--spacing-03);
+}
+
 .padding-left-right-04 {
   padding-left: var(--spacing-04);
   padding-right: var(--spacing-04);
@@ -185,6 +200,14 @@ Padding & gaps
 .padding-top-bottom-07 {
   padding-top: var(--spacing-07);
   padding-bottom: var(--spacing-07);
+}
+
+.gap-02 {
+  gap: var(--spacing-02);
+}
+
+.gap-03 {
+  gap: var(--spacing-03);
 }
 
 .gap-04 {
@@ -275,6 +298,35 @@ Dialog flavours
   color: var(--lumo-header-text-color);
 }
 
+.dialog-step-name-text {
+  font-size: var(--lumo-font-size-m);
+  font-weight: var(--font-weight-medium);
+  line-height: var(--lumo-line-height-xs);
+}
+
+.dialog-step-icon-arrow {
+  font-size: 12px;
+}
+
+.footer {
+  justify-content: flex-end;
+}
+
+.footer-intermediate {
+  justify-content: space-between;
+  width: 100%;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.border-bottom-solid {
+  border-bottom-style: solid;
+  border-bottom-color: rgba(26, 56, 96, 0.1);
+  border-bottom-width: 1px;
+}
+
 /***************************
 Buttons
  **************************/
@@ -301,10 +353,68 @@ Icons
   color: var(--icon-color-warning)
 }
 
-.icon-size-m {
-  height: var(--icon-size-m);
+.icon-size-xs {
+  height: var(--icon-size-xs);
+  width: var(--icon-size-xs);
 }
 
+.icon-size-s {
+  height: var(--icon-size-s);
+  width: var(--icon-size-s);
+}
+
+.icon-size-m {
+  height: var(--icon-size-m);
+  width: var(--icon-size-m);
+}
+
+.icon-size-l {
+  height: var(--icon-size-l);
+  width: var(--icon-size-l);
+}
+
+.round {
+  border-radius: 50%;
+}
+
+.icon-background-color-default {
+  background-color: var(--icon-color-default);
+}
+
+.icon-background-color-primary {
+  background-color: var(--icon-color-primary);
+}
+
+.icon-color-default {
+  color: var(--icon-color-default);
+}
+
+.icon-text-white {
+  color: white;
+}
+
+.icon-text-inner {
+  font-size: 0.875rem;
+}
+
+.icon-label-text {
+  font-size: 0.875rem;
+}
+
+.icon-label-text-color-default {
+  color: var(--icon-color-default);
+}
+
+.icon-label-text-color-primary {
+  color: var(--icon-color-primary);
+}
+
+.icon-content-center {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
+}
 
 
 /****************************
@@ -315,9 +425,18 @@ Layout
   align-items: center;
 }
 
+.flex-align-items-bottom {
+  align-items: self-end;
+}
+
 .flex-horizontal {
   display: flex;
   flex-direction: row;
+}
+
+.flex-vertical {
+  display: flex;
+  flex-direction: column;
 }
 
 
