add missing flex-align-items-baseline

--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -448,6 +448,10 @@ Layout
   align-items: center;
 }
 
+.flex-align-items-baseline {
+  align-items: baseline;
+}
+
 .flex-align-items-bottom {
   align-items: self-end;
 }
