Add support for confounding variables (#877)
* add todo to open PR

* add mermaid plot

* change to identifier

* add sequence diagrams

* update sql scripts

* Pass schema validation

* Fix order of statements

* do not allow null values for measurement counts

* refine diagram

* update sql so it only creates missing tables

* minimal example

* add javadoc

* wip

* add confounding variables to templates

* move the `@Transactional` aspect to the implementing class

> The Spring team recommends that you annotate methods of concrete classes with the @Transactional annotation, rather than relying on annotated methods in interfaces, even if the latter does work for interface-based and target-class proxies as of 5.0.
https://docs.spring.io/spring-framework/reference/data-access/transaction/declarative/annotations.html

* wip

* wip

* wip

* Fix file size formatting

* Fix connection testing for openbis

* Add equals and hash code to Sample.java object

* implement the update case for confounding variables

* Implement sample/batch deletion

* extract methods for measurement and sample creation in openbis

* Fix merge breaks

* fix test

* update demo with detail box and cards

* static import of Objects.requireNonNull

* Add javadoc to HasBoundField.java

* Extract StringBean

* Add color and cursor classes

* replace random by cursor

* add missing flex-align-items-baseline

* Add ConfoundingVariablesUserInput

* Add info text and adjust gap

* Add tab for confounding variables

* update dev bundle

* show existing confounding variables

* add new confounding variables

* Implement editing of confounding variables

* Throw exception for duplicate columns

* Prevent creation and rename of duplicate confounding variable

* Prevent duplicate naming and accidental deletion

* prettify frontend

* Fix groups not being loaded

* remove file

* Address sonar cloud analysis of Sa

--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -226,6 +226,29 @@ Padding & gaps
   gap: var(--spacing-07);
 }
 
+/***************************
+Colors
+***************************/
+.color-primary {
+  color: var(--lumo-primary-text-color)
+}
+
+.color-secondary {
+  color: var(--lumo-secondary-text-color)
+}
+
+.color-tertiary {
+  color: var(--lumo-tertiary-text-color)
+}
+
+/***************************
+Behaviour
+***************************/
+
+.clickable {
+  cursor: pointer;
+}
+
 
 /***************************
 Dialogs
@@ -319,6 +342,10 @@ Dialog flavours
 
 .full-width {
   width: 100%;
+}
+
+.full-height {
+  height: 100%;
 }
 
 .border-bottom-solid {
@@ -423,6 +450,10 @@ Layout
 
 .flex-align-items-center {
   align-items: center;
+}
+
+.flex-align-items-baseline {
+  align-items: baseline;
 }
 
 .flex-align-items-bottom {
