--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -4,6 +4,9 @@
 
 #announcements {
   grid-area: announcements;
+  background-color: var(--lumo-warning-color);
+  padding: var(--lumo-space-s) var(--lumo-space-m);
+  text-align: center;
 }
 
 #main-layout {
