--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -1,6 +1,5 @@
 #content-area {
   grid-area: content-area;
-  overflow: hidden;
 }
 
 .announcement {
@@ -27,7 +26,7 @@
 #main-layout {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows:minmax(max-content, 5%) minmax(max-content, 95%) minmax(min-content, 5%);
+  grid-template-rows: auto minmax(max-content, 0.95fr) minmax(min-content, 0.05fr);
   height: 100%;
   /*Default design of components is too big for smaller screens*/
   zoom: 90%;
@@ -296,8 +295,8 @@
 }
 
 .main.project-overview {
-  grid-template-columns: minmax(min-content, 1fr);
-  grid-template-rows: minmax(min-content, 10%) minmax(min-content, 80%);
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.1fr 0.9fr;
   grid-template-areas:
     "."
     "projectcollection";
