Apply styles for UI

--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -186,6 +186,10 @@ Padding & gaps
   padding-top: var(--spacing-03);
 }
 
+.padding-top-04 {
+  padding-top: var(--spacing-04);
+}
+
 .padding-top-05 {
   padding-top: var(--spacing-05);
 }
@@ -417,6 +421,13 @@ Icons
   color: var(--icon-color-default);
 }
 
+.icon-color-success {
+  color: var(--icon-color-success);
+}
+
+.icon-color-error {
+  color: var(--icon-color-error);
+}
 .icon-text-white {
   color: white;
 }
@@ -471,6 +482,10 @@ Layout
   flex-direction: column;
 }
 
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
 /**************************
 Boxes
 ****************************/
@@ -480,6 +495,14 @@ Boxes
   border-style: solid;
   border-width: 1px;
   border-radius: var(--spacing-03);
+}
+
+/****************************
+Backgrounds
+****************************/
+
+.background-contrast-10pct {
+  background-color: var(--lumo-contrast-10pct);
 }
 
 /****************************
